--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ button {
     border-top-right-radius: 100%;
     border-top-left-radius: 100%;
     color: #5b478f;
-    margin-top: 65px;
+    margin-top: 6.5rem;
 }
 
 .signup-nav-btn{
@@ -133,5 +133,11 @@ button {
 @media screen and (max-width: 400px) {
     html {
         font-size: 50%;
+    }
+    button {
+        height: 5rem;
+    }
+    .login-nav-btn {
+    margin-top: 4rem;
     }
 }
