--- a/styles.css
+++ b/styles.css
@@ -177,10 +177,14 @@ button {
     button {
         height: 30px;
     }
+    .signup-nav-btn {
+        height: 30px;
+        padding-top: 10px;
+    }
     .login-nav-btn {
-    margin-top: 4rem;
-    bottom:50px;
-    height: 30px;
+        margin-top: 4rem;
+        bottom:50px;
+        height: 30px;
     }
     .login-text {
         bottom: 20px;
